Mon Feb 10 09:19:57 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
        * etc/index.html:
          Updated some links

Sun Feb  9 18:01:10 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Fixed ACE version

Fri Feb  7 23:10:11 UTC 2014  Steve Huston  <shuston@riverace.com>

        * rpmbuild/ace-tao.spec: Fixed conditionals to package TAO when needed.

Fri Feb  7 21:57:00 UTC 2014  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-mavericks.h:
          If ACE_HAS_CUSTOM_EXPORT_MACROS isn't set, disable it. Also disable
          two deprecated functions (sbrk and tempnam).

Thu Feb  6 15:55:00 UTC 2014  Steve Huston  <shuston@riverace.com>

        * rpmbuild/ace-tao.spec: Fixed syntax problems in TAO headers
          collection.

Wed Feb  5 19:07:37 UTC 2014  Steve Huston  <shuston@riverace.com>

        * rpmbuild/ace-tao.spec: Added support for --without tao (and
          --with tao), defaulting to --with tao. Allows one to build just
          the ACE RPMs from an ACE-src tarball.

        * NEWS: Added note about being able to build ACE RPMs.

Mon Feb  3 12:55:23 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression/rle/RLECompressor.cpp:
          Fixed another boundary bug. Thanks to Derek Dominish
          <derek dot dominish at dsto dot defence dot gov dot au> for this fix

Thu Jan 30 17:00:22 UTC 2014  Steve Huston  <shuston@riverace.com>

        * ace/Process.h: A few more doxygen adjustments.

Wed Jan 29 20:52:37 UTC 2014  Steve Huston  <shuston@riverace.com>

        * ace/Process.h:
        * ace/Process_Manager.h: Documentation improvements.

Wed Jan 29 19:29:58 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX.pm:
          Not see a problem using an iBoot as failure when we haven't
          tried multiple times

        * bin/PerlACE/ProcessWinCE.pm: